logo and  aftermarket title alignment fixed accronding to new ui

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -18,14 +18,14 @@ header {
         img{
             margin-top: 10px;
             //margin-left: 30px;
-            margin-left: 35px;
+            margin-left: 34px;
             margin-right: 20px;
             width: 105px;
             //content:url($website_logo);
         }
         p{
             //margin: 5px 0 0 5px;
-            margin: 5px 0 0 10px;
+            margin: 5px 0 0 9px;
 
             //it was font-size: 16px
             font-size: 15px; 
